# lab_map_example

./: enemy.py  game_platformer.py  helpers.py  pyproject.toml
assets/map/: forest_map.tmj  forest_map.tmx  map_topdown.tmj
