[tool.poetry]
name = "lab-map-example"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
